--- a/index.html
+++ b/index.html
@@ -9,147 +9,22 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 
 <style>
-/* --- GLOBAL RESET --- */
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
-body {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  background: #0f172a;
-  color: #f8fafc;
-  padding: 30px 15px;
-  text-align: center;
-}
-
-/* --- CARD --- */
-.card {
-  background: rgba(255, 255, 255, 0.05);
-  border-radius: 16px;
-  padding: 30px 20px;
-  max-width: 500px;
-  width: 100%;
-  margin: auto;
-  box-shadow: 0 6px 20px rgba(0, 0, 0, 0.4);
-  transition: transform 0.2s;
-}
-
-.card:hover {
-  transform: translateY(-5px);
-}
-
-h2 {
-  margin-bottom: 20px;
-  font-weight: 600;
-  font-size: 1.6rem;
-}
-
-/* --- FORM INPUT --- */
-form .input-group {
-  position: relative;
-  margin-bottom: 15px;
-}
-
-form input,
-form select {
-  width: 100%;
-  padding: 12px 40px 12px 12px;
-  border-radius: 10px;
-  border: none;
-  font-size: 15px;
-  background: rgba(255, 255, 255, 0.1);
-  color: #f8fafc;
-  outline: none;
-  transition: background 0.2s, box-shadow 0.2s;
-}
-
-form input:focus,
-form select:focus {
-  background: rgba(255, 255, 255, 0.2);
-  box-shadow: 0 0 8px #3b82f6;
-}
-
-/* --- ICONS INSIDE INPUT --- */
-.input-group i {
-  position: absolute;
-  right: 12px;
-  top: 50%;
-  transform: translateY(-50%);
-  color: #94a3b8;
-  pointer-events: none;
-}
-
-/* --- BUTTON --- */
-button {
-  width: 100%;
-  padding: 12px;
-  border-radius: 12px;
-  border: none;
-  background: #3b82f6;
-  color: white;
-  font-size: 16px;
-  font-weight: 500;
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 8px;
-  transition: background 0.3s, transform 0.2s;
-}
-
-button:hover {
-  background: #2563eb;
-  transform: translateY(-2px);
-}
-
-/* --- RESULT AREA --- */
-#result {
-  margin-top: 20px;
-  font-size: 14px;
-  text-align: left;
-  word-wrap: break-word;
-  background: rgba(255, 255, 255, 0.05);
-  padding: 12px;
-  border-radius: 10px;
-}
-
-/* --- MEDIA QUERIES UNTUK MOBILE --- */
-@media (max-width: 600px) {
-  body {
-    padding: 15px 10px;
-  }
-
-  .card {
-    padding: 20px 15px;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
-  }
-
-  h2 {
-    font-size: 1.3rem;
-  }
-
-  form input,
-  form select {
-    font-size: 14px;
-    padding: 10px 35px 10px 10px; /* padding icon lebih kecil */
-  }
-
-  .input-group i {
-    right: 10px; /* icon lebih dekat ke kanan */
-  }
-
-  button {
-    font-size: 15px;
-    padding: 10px;
-  }
-
-  #result {
-    font-size: 13px;
-    padding: 10px;
-  }
-}
+* { box-sizing: border-box; margin: 0; padding: 0; }
+body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background: #0f172a; color: #f8fafc; padding: 30px 15px; text-align: center; }
+.card { background: rgba(255,255,255,0.05); border-radius:16px; padding:30px 20px; max-width:500px; width:100%; margin:auto; box-shadow:0 6px 20px rgba(0,0,0,0.4); transition: transform 0.2s; }
+.card:hover { transform: translateY(-5px); }
+h2 { margin-bottom:20px; font-weight:600; font-size:1.6rem; }
+form .input-group { position:relative; margin-bottom:15px; }
+form input, form select { width:100%; padding:12px 40px 12px 12px; border-radius:10px; border:none; font-size:15px; background: rgba(255,255,255,0.1); color:#f8fafc; outline:none; transition: background 0.2s, box-shadow 0.2s; }
+form input:focus, form select:focus { background: rgba(255,255,255,0.2); box-shadow:0 0 8px #3b82f6; }
+.input-group i { position:absolute; right:12px; top:50%; transform:translateY(-50%); color:#94a3b8; pointer-events:none; }
+button { width:100%; padding:12px; border-radius:12px; border:none; background:#3b82f6; color:white; font-size:16px; font-weight:500; cursor:pointer; display:flex; align-items:center; justify-content:center; gap:8px; transition: background 0.3s, transform 0.2s; }
+button:hover { background:#2563eb; transform: translateY(-2px); }
+#result { margin-top:20px; font-size:14px; text-align:left; word-wrap: break-word; background: rgba(255,255,255,0.05); padding:12px; border-radius:10px; white-space: pre-wrap; }
+#progressContainer { margin-top:10px; width:100%; background: rgba(255,255,255,0.1); border-radius:12px; overflow:hidden; height:20px; display:none; }
+#progressBar { height:100%; width:0%; background:#3b82f6; transition: width 0.2s; }
+.file-info { margin-top:5px; font-size:13px; color:#94a3b8; text-align:left; }
+@media(max-width:600px){ body{padding:15px 10px;} .card{padding:20px 15px; box-shadow:0 4px 12px rgba(0,0,0,0.3);} h2{font-size:1.3rem;} form input, form select{font-size:14px; padding:10px 35px 10px 10px;} .input-group i{right:10px;} button{font-size:15px; padding:10px;} #result{font-size:13px; padding:10px;} }
 </style>
 </head>
 <body>
@@ -157,34 +32,17 @@ button:hover {
 <div class="card">
   <h2><i class="fa-solid fa-gears"></i> YUDZXML UPDATE SCRIPT</h2>
   <form id="updateForm">
-    <div class="input-group">
-      <input type="text" id="author" placeholder="Author" required />
-      <i class="fa-solid fa-user"></i>
-    </div>
-    <div class="input-group">
-      <input type="text" id="title" placeholder="Title" required />
-      <i class="fa-solid fa-heading"></i>
-    </div>
-    <div class="input-group">
-      <input type="text" id="version" placeholder="Version" required />
-      <i class="fa-solid fa-code-branch"></i>
-    </div>
-    <div class="input-group">
-      <input type="text" id="keyScript" placeholder="Key Script" required />
-      <i class="fa-solid fa-key"></i>
-    </div>
-    <div class="input-group">
-      <select id="versionType" required>
-        <option value="">-- Pilih Versi --</option>
-        <option value="full">Full</option>
-        <option value="lite">Lite</option>
-      </select>
-      <i class="fa-solid fa-list"></i>
-    </div>
+    <div class="input-group"><input type="text" id="author" placeholder="Author" required /><i class="fa-solid fa-user"></i></div>
+    <div class="input-group"><input type="text" id="title" placeholder="Title" required /><i class="fa-solid fa-heading"></i></div>
+    <div class="input-group"><input type="text" id="version" placeholder="Version" required /><i class="fa-solid fa-code-branch"></i></div>
+    <div class="input-group"><input type="text" id="keyScript" placeholder="Key Script" required /><i class="fa-solid fa-key"></i></div>
+    <div class="input-group"><select id="versionType" required><option value="">-- Pilih Versi --</option><option value="full">Full</option><option value="lite">Lite</option></select><i class="fa-solid fa-list"></i></div>
     <div class="input-group">
       <input type="file" id="file" accept=".zip" required />
       <i class="fa-solid fa-file-zipper"></i>
     </div>
+    <div class="file-info" id="fileInfo"></div>
+    <div id="progressContainer"><div id="progressBar"></div></div>
     <button type="submit"><i class="fa-solid fa-upload"></i> Upload Update</button>
   </form>
   <pre id="result"></pre>
@@ -193,25 +51,31 @@ button:hover {
 <script>
 const form = document.getElementById("updateForm");
 const result = document.getElementById("result");
+const fileInput = document.getElementById("file");
+const fileInfo = document.getElementById("fileInfo");
+const progressContainer = document.getElementById("progressContainer");
+const progressBar = document.getElementById("progressBar");
 
-form.addEventListener("submit", async (e) => {
+fileInput.addEventListener("change", () => {
+  const file = fileInput.files[0];
+  if(file){
+    fileInfo.textContent = `File: ${file.name} (${(file.size/1024/1024).toFixed(2)} MB)`;
+  }else{
+    fileInfo.textContent = "";
+  }
+});
+
+form.addEventListener("submit", async (e)=>{
   e.preventDefault();
-
   const author = document.getElementById("author").value;
   const title = document.getElementById("title").value;
   const version = document.getElementById("version").value;
   const keyScript = document.getElementById("keyScript").value;
   const versionType = document.getElementById("versionType").value;
-  const file = document.getElementById("file").files[0];
+  const file = fileInput.files[0];
 
-  if (!file) {
-    result.textContent = "Harap pilih file update!";
-    return;
-  }
-  if (!versionType) {
-    result.textContent = "Harap pilih versi update (Full/Lite)!";
-    return;
-  }
+  if(!file){ result.textContent="Harap pilih file update!"; return; }
+  if(!versionType){ result.textContent="Harap pilih versi update (Full/Lite)!"; return; }
 
   const formData = new FormData();
   formData.append("author", author);
@@ -221,37 +85,48 @@ form.addEventListener("submit", async (e) => {
   formData.append("versionType", versionType);
   formData.append("file", file);
 
-  result.textContent = "Mengupload...";
+  result.textContent="";
+  progressContainer.style.display="block";
+  progressBar.style.width="0%";
 
-  try {
-    console.log("Mengirim request ke /api/update:", { author, title, version, keyScript, versionType, file });
+  try{
+    const xhr = new XMLHttpRequest();
+    xhr.open("POST","https://update-v1.vercel.app/api/update",true);
+    xhr.setRequestHeader("x-admin-key","UPDATE-X7BOTZ-MD-YUDZXML");
 
-    const res = await fetch("https://update-v1.vercel.app/api/update", {
-      method: "POST",
-      headers: {
-        "x-admin-key": "UPDATE-X7BOTZ-MD-YUDZXML"
-        // ❌ Jangan set 'Content-Type', biarkan browser handle multipart
-      },
-      body: formData
-    });
+    xhr.upload.onprogress=(event)=>{
+      if(event.lengthComputable){
+        const percent = ((event.loaded/event.total)*100).toFixed(2);
+        progressBar.style.width=`${percent}%`;
+        fileInfo.textContent = `File: ${file.name} (${(file.size/1024/1024).toFixed(2)} MB) - ${percent}%`;
+      }
+    };
 
-    console.log("Response status:", res.status, res.statusText);
-    console.log("Response headers:", Array.from(res.headers.entries()));
+    xhr.onload=()=>{
+      if(xhr.status===200){
+        try{
+          const data = JSON.parse(xhr.responseText);
+          result.textContent=JSON.stringify(data,null,2);
+        }catch(err){
+          result.textContent="Error: Response bukan JSON.";
+          console.error(err,xhr.responseText);
+        }
+      }else{
+        result.textContent=`Error: ${xhr.status} ${xhr.statusText}`;
+      }
+      progressContainer.style.display="none";
+      fileInfo.textContent="";
+    };
 
-    const text = await res.text(); // baca body hanya sekali
-    let data;
-    try {
-      data = JSON.parse(text); // parse manual JSON
-      console.log("Response JSON:", data);
-      result.textContent = JSON.stringify(data, null, 2);
-    } catch (err) {
-      console.error("Response bukan JSON:", text);
-      result.textContent = "Error: Response bukan JSON. Lihat console.";
-    }
+    xhr.onerror=()=>{
+      result.textContent="Upload gagal. Periksa koneksi.";
+      progressContainer.style.display="none";
+    };
 
-  } catch (err) {
-    console.error("Fetch error:", err);
-    result.textContent = "Error: " + err.message;
+    xhr.send(formData);
+  }catch(err){
+    result.textContent="Error: "+err.message;
+    progressContainer.style.display="none";
   }
 });
 </script>
